# checkbookwizard_app

./: .gitignore  README.md  build_log.txt  main.py  pyproject.toml  requirements.txt
data/: bill_list_item.py  bills.py  data_sync.py  earnings_list_item.py  edit_bills_list.py  user.py  utils.py
ui/: ads.py  alert.py  bill_list_item.py  bills_ui.py  charts_check_list.py  charts_ui.py  earnings_list_item.py  earnings_ui.py  edit_bills_ui.py  home_ui.py  login_ui.py  my_controls.py  pay_ui.py  settings_ui.py  theme.py
ui/bill_list_page/: bill_list_item.py  bills_ui.py
ui/charts_page/: charts_check_list.py  charts_ui.py
ui/earnings_page/: earnings_list_item.py  earnings_ui.py
