[project]
name = "Checkbook Wizard"
version = "0.0.20"
description = "Easily keep track of your bills"
authors = [
  {name = "James Burnison", email = "jeb192004@gmail.com"}
]
dependencies = [
  "flet-ads",
  "flet>=0.26.0",
]

[tool.flet]
org = "com.burnison.me" # --org
product = "Checkbook Wizard" # --product
company = "burnison.me" # --company
build_number = 20 # --build-number

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.26.0",
    "flet-ads"
]

[tool.flet.splash]
color = "#ffffff"
dark_color = "#000000"

# for Android
[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-1830788262544752~9544887950"

# for iOS
[tool.flet.ios.info]
GADApplicationIdentifier = "ca-app-pub-1830788262544752~1986225467"

[tool.flet.android.signing]
#key_store = "/Users/jamesburnison/checkbookwizard.jks"
#key_alias = "wizard"

