[project]
name = "Checkbook Wizard"
version = "0.0.26"
description = "Easily keep track of your bills"
authors = [
  {name = "James Burnison", email = "jeb192004@gmail.com"}
]

[tool.flet]
org = "com.burnison.me" # --org
product = "Checkbook Wizard" # --product
company = "burnison.me" # --company
build_number = 26 # --build-number

dependencies = [
  "flet-ads",
  "flet>=0.26.0",
]

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.26.0",
    "flet-ads"
]

[tool.flet.splash]
color = "#ffffff"
dark_color = "#000000"

# for Android
[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-1830788262544752~9544887950"

[tool.flet.android.permission]
"com.google.android.gms.permission.AD_ID" = true

[tool.flet.android.signing]
#key_store = "/Users/jamesburnison/checkbookwizard.jks"
#key_alias = "wizard"


# for iOS
[tool.flet.ios.info]
GADApplicationIdentifier = "ca-app-pub-1830788262544752~1986225467"
NSPhotoLibraryUsageDescription = "This app uses the photo library during the build process to generate app icons."


[tool.flet.ios]
ios-team-id = "YS6MHH4WM9"
provisioning_profile = "7b4ebd8a-957c-40db-bc7e-3d3848fd77d9"
signing_certificate = "Apple Distribution"
export_options = { uploadSymbols = false }




